--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
 
+<html>
+  <head>
+    <title>TowerAtta.tk - Build, Defend, Attack!</title>
+    <script src="js/pixi.js"></script>
+  </head>
+  <body>
+    <div id="gameContainer">
+      
+    </div>
+    <script src="js/game.js"></script>
+  </body>
+</html>
