--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
+
+<head>
     <title>TowerAtta.tk - Build, Defend, Attack!</title>
     <script src="js/pixi.js"></script>
-  </head>
-  <body>
+    <script src="js/AQuery.js"></script>
+    <link type="text/css" rel='stylesheet' href="css/styles.css">
+</head>
+
+<body>
     <div id="gameContainer">
-      
+
     </div>
     <script src="js/game.js"></script>
-  </body>
+</body>
+
 </html>
