--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,9 @@
     <div id="gameContainer">
 
     </div>
+    <script src="js/sprites.js"></script>
     <script src="js/game.js"></script>
+
 </body>
 
 </html>
